Fix list item code and table overflow

--- a/resources/css/_code.css
+++ b/resources/css/_code.css
@@ -15,8 +15,13 @@ pre code.torchlight .summary-caret {
     @apply mr-1;
 }
 
+li code,
 p code {
     @apply inline-flex max-w-full overflow-scroll
+}
+
+table {
+    @apply block max-w-full overflow-scroll
 }
 
 .tabbed-code {
